Lightbox -stop word-break on field labels

--- a/portal2/src/main/webapp/themes/default/css/lightbox.css
+++ b/portal2/src/main/webapp/themes/default/css/lightbox.css
@@ -70,7 +70,7 @@ iframe#lightbox_image{
 }
 
 #lightbox_info li strong{
-	word-wrap:	normal;
+	white-space: nowrap;
 }
 	
 /*
